--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -13,8 +13,9 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "skipLibCheck": true,
+    "noEmit": true,
     "baseUrl": ".",
-    "typeRoots": ["./node_modules/@types"],
     "lib": ["dom", "es2015", "es2016"]
-  }
+  },
+  "exclude": ["cypress"]
 }
