--- a/renovate.json
+++ b/renovate.json
@@ -8,5 +8,16 @@
     ":semanticCommitTypeAll(Chore)",
     ":semanticCommits",
     ":pinDigestsDisabled"
+  ],
+    "pathRules": [
+    {
+      "paths": ["packages/**"],
+      "extends": ["config:js-lib"],
+      "dependencies": {
+    "extends": ":semanticCommitType(Fix)"
+  },
+    },
+      {"paths":["website"], 
+       "extends":["config:js-app"]}
   ]
 }
