--- a/website/package.json
+++ b/website/package.json
@@ -27,7 +27,7 @@
     "react-codemirror2": "4.2.1",
     "react-dom": "16.3.2",
     "react-syntax-highlighter": "7.0.2",
-    "scroll-into-view-if-needed": "2.0.0-dev",
+    "scroll-into-view-if-needed": "2.0.0-alpha.1",
     "styled-components": "3.2.6",
     "system-font-stack": "1.0.5",
     "typescript": "2.8.3",
