--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "scripts": {
     "precommit": "lint-staged",
     "predeploy:website": "cd packages/scroll-into-view-if-needed && yarn build",
-    "deploy:website": "cd website && yarn deploy"
+    "deploy:website": "cd website && yarn deploy",
+    "publish:canary": "lerna publish --npm-tag=next --canary",
+    "semantic-release": "true"
   },
   "devDependencies": {
     "husky": "0.14.3",
+    "lerna": "2.10.2",
     "lint-staged": "7.0.4",
     "prettier": "1.12.1",
-    "prettier-package-json": "1.5.1"
+    "prettier-package-json": "1.5.1",
+    "semantic-release": "15.1.7",
+    "semantic-release-monorepo": "6.0.1"
   },
   "lint-staged": {
     "*.js": [
