--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
       - add-ssh-keys:
         fingerprints:
           - "e1:ca:5d:f0:58:11:c7:ae:b7:ac:4a:1b:cc:3a:0d:4a"
-      - run: yarn semantic-release || true
+      - run: yarn semantic-release
 
 # Workflows enables us to run multiple jobs in parallel
 workflows:
@@ -93,4 +93,6 @@ workflows:
             - Website
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - semantic-release
