add missing plugin

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "semantic-release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo"
   },
   "devDependencies": {
+    "@semantic-release/git": "4.0.2",
     "husky": "0.14.3",
     "lerna": "2.10.2",
     "lint-staged": "7.0.4",
