ci(publishConfig): set dist-tag to next in root, see if semantic release detects it

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "semantic-release": "15.1.7",
     "semantic-release-monorepo": "6.0.1"
   },
+  "publishConfig": {
+    "tag": "next"
+  },
   "lint-staged": {
     "*.js": [
       "prettier --write",
