--- a/packages/smooth-scroll-into-view-if-needed/package.json
+++ b/packages/smooth-scroll-into-view-if-needed/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/stipsan/scroll-into-view-if-needed.git"
   },
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "main": "index.js",
   "files": [
     "auto.js",
