--- a/packages/smooth-scroll-into-view-if-needed/package.json
+++ b/packages/smooth-scroll-into-view-if-needed/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "invariant": "^2.2.4",
+    "scroll-into-view-if-needed": "^2.0.0",
     "warning": "^3.0.0"
   },
   "devDependencies": {
