--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -50,6 +50,8 @@
     "rollup-plugin-node-resolve": "3.3.0",
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-uglify": "3.0.0",
+    "semantic-release": "15.1.7",
+    "semantic-release-monorepo": "6.0.1",
     "typescript": "2.8.3"
   },
   "keywords": [
@@ -75,6 +77,15 @@
     ]
   },
   "module": "es/index.js",
+  "release": {
+    "prepare": [
+      "@semantic-release/npm"
+    ],
+    "verifyConditions": [
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
+  },
   "sideEffects": false,
   "typings": "typings/index.d.ts"
 }
