ci(semantic-release): testing to see if it is fixed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,11 +66,11 @@ jobs:
       - *install
       - run:
           name: scroll-into-view-if-needed
-          command: semantic-release -e semantic-release-monorep
+          command: npx --no-install semantic-release -e semantic-release-monorep
           working_directory: packages/scroll-into-view-if-needed
       - run:
           name: smooth-scroll-into-view-if-needed
-          command: semantic-release -e semantic-release-monorep
+          command: npx --no-install semantic-release -e semantic-release-monorep
           working_directory: packages/smooth-scroll-into-view-if-needed
 
 # Workflows enables us to run multiple jobs in parallel
