fix: move animation code to smooth package

--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -11,20 +11,19 @@
   "version": "2.0.0",
   "main": "index.js",
   "files": [
-    "auto.js",
     "compute.js",
     "es",
-    "ponyfill.js",
     "umd"
   ],
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "yarn build:cjs && yarn build:es && yarn build:umd && yarn build:umd.min",
+    "build": "yarn build:d.ts && yarn build:cjs && yarn build:es && yarn build:umd && yarn build:umd.min",
     "build:cjs": "BABEL_ENV=cjs babel src -d . --extensions '.ts'",
+    "build:d.ts": "tsc --emitDeclarationOnly",
     "build:es": "BABEL_ENV=es babel src -d es --extensions '.ts'",
     "build:umd": "BABEL_ENV=umd NODE_ENV=development rollup -c -f umd -o umd/scroll-into-view-if-needed.js",
     "build:umd.min": "BABEL_ENV=umd NODE_ENV=production rollup -c -f umd -o umd/scroll-into-view-if-needed.min.js",
-    "clean": "rimraf 'umd' 'es'",
+    "clean": "rimraf 'umd' 'es' 'typings",
     "dev": "concurrently 'tsc --watch' 'yarn build:cjs --watch'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "typecheck": "tsc"
