--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,6 @@
   "lerna": "2.10.2",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent"
+  "version": "independent",
+  "ignore": "scroll-into-view-if-needed-website"
 }
