--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,10 @@ jobs:
       - checkout
       - restore-cache: *restore-cache
       - *install
+      - run:
+          name: create *.d.ts files for scroll-into-view-if-needed
+          command: yarn build:d.ts
+          working_directory: packages/scroll-into-view-if-needed
       - run: yarn typecheck
       - save-cache: *save-cache
 
