--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,5 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
-  "ignore": "scroll-into-view-if-needed-website"
+  "ignore": ["scroll-into-view-if-needed-website", "integration-tests/*"]
 }
