--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
       "prettier --write",
       "git add"
     ],
+    "*.css": [
+      "prettier --write",
+      "git add"
+    ],
     "*.md": [
       "prettier --write",
       "git add"
