fix: improve examples and add tests (#191)
* chore(deps): upgrade prettier-browser

* simpler example

* eslint is not bad

* working on initial integration tests

* Sync with Prettier

* test

* test

* refactoring compute logic

* tests work, but need cleanup

* fixes all around

* less annoying for cjs users

* prepare more test cases

* extract Expect component

* cleanup

* fix TS

* cleanup a little more

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - checkout
       - restore-cache: *restore-cache
       - *install
+      - run: yarn lint
       - run:
           name: scroll-into-view-if-needed
           command: yarn build:d.ts
@@ -73,14 +74,14 @@ jobs:
       - checkout
       - restore-cache: *restore-cache
       - *install
-      - run:
-          name: scroll-into-view-if-needed
-          command: npx --no-install semantic-release -e semantic-release-monorepo
-          working_directory: packages/scroll-into-view-if-needed
-      - run:
-          name: smooth-scroll-into-view-if-needed
-          command: npx --no-install semantic-release -e semantic-release-monorepo
-          working_directory: packages/smooth-scroll-into-view-if-needed
+      #- run:
+      #    name: scroll-into-view-if-needed
+      #    command: npx --no-install semantic-release -e semantic-release-monorepo
+      #    working_directory: packages/scroll-into-view-if-needed
+      #- run:
+      #    name: smooth-scroll-into-view-if-needed
+      #    command: npx --no-install semantic-release -e semantic-release-monorepo
+      #    working_directory: packages/smooth-scroll-into-view-if-needed
 
 # Workflows enables us to run multiple jobs in parallel
 workflows:
