--- a/packages/scroll-into-view-if-needed/package.json
+++ b/packages/scroll-into-view-if-needed/package.json
@@ -13,6 +13,7 @@
   "files": [
     "compute.js",
     "es",
+    "typings",
     "umd"
   ],
   "scripts": {
@@ -27,10 +28,6 @@
     "dev": "concurrently 'tsc --watch' 'yarn build:cjs --watch'",
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "invariant": "^2.2.4",
-    "warning": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.46",
@@ -49,7 +46,6 @@
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-uglify": "3.0.0",
     "semantic-release": "15.1.7",
-    "semantic-release-monorepo": "6.0.1",
     "typescript": "2.8.3"
   },
   "keywords": [
@@ -78,10 +74,6 @@
   "release": {
     "prepare": [
       "@semantic-release/npm"
-    ],
-    "verifyConditions": [
-      "@semantic-release/npm",
-      "@semantic-release/github"
     ]
   },
   "sideEffects": false,
