--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@
 aliases:
   - &restore-cache
     keys:
-      - v4-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+      - v5-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
       # Fallback in case checksum fails
-      - v4-dependencies-{{ .Branch }}-
+      - v5-dependencies-{{ .Branch }}-
 
   - &install
     run: yarn --no-progress
@@ -12,7 +12,7 @@ aliases:
   - &save-cache
     paths:
       - node_modules
-    key: v4-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
+    key: v5-dependencies-{{ .Branch }}-{{ checksum "yarn.lock" }}
 
   - &cypress-dependencies-install
     run:
@@ -29,39 +29,13 @@ jobs:
       - restore-cache: *restore-cache
       - *install
       - run: yarn lint
-      - run:
-          name: scroll-into-view-if-needed
-          command: yarn build:d.ts
-          working_directory: packages/scroll-into-view-if-needed
-      - run:
-          name: scroll-into-view-if-needed
-          command: yarn build
-          working_directory: packages/scroll-into-view-if-needed
-      - run:
-          name: smooth-scroll-into-view-if-needed
-          command: yarn typecheck
-          working_directory: packages/smooth-scroll-into-view-if-needed
-      - save-cache: *save-cache
+      - run: yarn typecheck
 
   Build:
     docker:
       - image: circleci/node:8
     steps:
       - checkout
-      - restore-cache: *restore-cache
-      - *install
-      - run: yarn build
-      - save-cache: *save-cache
-
-  Website:
-    docker:
-      - image: circleci/node:carbon-browsers
-    steps:
-      - checkout
-      - run: 
-          name: Report dependency versions included in the docker image
-          command: node --version && npm --version && npx --version && yarn --version
-      - *cypress-dependencies-install
       - restore-cache: *restore-cache
       - *install
       - run: yarn build
@@ -74,14 +48,7 @@ jobs:
       - checkout
       - restore-cache: *restore-cache
       - *install
-      #- run:
-      #    name: scroll-into-view-if-needed
-      #    command: npx --no-install semantic-release -e semantic-release-monorepo
-      #    working_directory: packages/scroll-into-view-if-needed
-      #- run:
-      #    name: smooth-scroll-into-view-if-needed
-      #    command: npx --no-install semantic-release -e semantic-release-monorepo
-      #    working_directory: packages/smooth-scroll-into-view-if-needed
+      - run: npx semantic-release
 
 # Workflows enables us to run multiple jobs in parallel
 workflows:
@@ -90,12 +57,10 @@ workflows:
     jobs:
       - Typecheck
       - Build
-      - Website
       - Semantic Release:
           requires:
             - Typecheck
             - Build
-            - Website
           filters:
             branches:
               only:
